logs/proj_misc_iox_sensor.log
make[1]: se ingresa al directorio «/home/martin/Proyectos/ciaa/liblpc»
CC lpc_chip_43xx/src/adc_18xx_43xx.c
CC lpc_chip_43xx/src/aes_18xx_43xx.c
CC lpc_chip_43xx/src/atimer_18xx_43xx.c
CC lpc_chip_43xx/src/ccan_18xx_43xx.c
CC lpc_chip_43xx/src/chip_18xx_43xx.c
CC lpc_chip_43xx/src/clock_18xx_43xx.c
CC lpc_chip_43xx/src/dac_18xx_43xx.c
CC lpc_chip_43xx/src/eeprom_18xx_43xx.c
CC lpc_chip_43xx/src/emc_18xx_43xx.c
CC lpc_chip_43xx/src/enet_18xx_43xx.c
CC lpc_chip_43xx/src/evrt_18xx_43xx.c
CC lpc_chip_43xx/src/fpu_init.c
CC lpc_chip_43xx/src/gpdma_18xx_43xx.c
CC lpc_chip_43xx/src/gpio_18xx_43xx.c
CC lpc_chip_43xx/src/gpiogroup_18xx_43xx.c
CC lpc_chip_43xx/src/hsadc_18xx_43xx.c
CC lpc_chip_43xx/src/i2c_18xx_43xx.c
CC lpc_chip_43xx/src/i2cm_18xx_43xx.c
CC lpc_chip_43xx/src/i2s_18xx_43xx.c
CC lpc_chip_43xx/src/iap_18xx_43xx.c
CC lpc_chip_43xx/src/lcd_18xx_43xx.c
CC lpc_chip_43xx/src/otp_18xx_43xx.c
CC lpc_chip_43xx/src/pinint_18xx_43xx.c
CC lpc_chip_43xx/src/pmc_18xx_43xx.c
CC lpc_chip_43xx/src/ring_buffer.c
CC lpc_chip_43xx/src/ritimer_18xx_43xx.c
CC lpc_chip_43xx/src/rtc_18xx_43xx.c
CC lpc_chip_43xx/src/sct_18xx_43xx.c
CC lpc_chip_43xx/src/sct_pwm_18xx_43xx.c
CC lpc_chip_43xx/src/sdif_18xx_43xx.c
CC lpc_chip_43xx/src/sdio_18xx_43xx.c
CC lpc_chip_43xx/src/sdmmc_18xx_43xx.c
CC lpc_chip_43xx/src/spi_18xx_43xx.c
CC lpc_chip_43xx/src/ssp_18xx_43xx.c
CC lpc_chip_43xx/src/stopwatch_18xx_43xx.c
CC lpc_chip_43xx/src/sysinit_18xx_43xx.c
CC lpc_chip_43xx/src/timer_18xx_43xx.c
CC lpc_chip_43xx/src/uart_18xx_43xx.c
CC lpc_chip_43xx/src/wwdt_18xx_43xx.c
CC lpc_board_ciaa_edu_4337/src/board.c
CC lpc_board_ciaa_edu_4337/src/board_sysinit.c
CC lpc_board_ciaa_edu_4337/src/crp.c
CC lpc_board_ciaa_edu_4337/src/lcd_st7565s.c
CC lpc_board_ciaa_edu_4337/src/lpc_phy_smsc87x0.c
CC lpc_board_ciaa_edu_4337/src/wm8904.c
CC misc_iox_sensor/example/src/iox_sensor.c
misc_iox_sensor/example/src/iox_sensor.c:49:3: warning: #warning "Channel configurations not set for the board!" [-Wcpp]
  #warning "Channel configurations not set for the board!"
   ^
misc_iox_sensor/example/src/iox_sensor.c: In function 'i2c_init':
misc_iox_sensor/example/src/iox_sensor.c:73:17: error: 'SHIELD_I2C' undeclared (first use in this function)
  Board_I2C_Init(SHIELD_I2C);
                 ^
misc_iox_sensor/example/src/iox_sensor.c:73:17: note: each undeclared identifier is reported only once for each function it appears in
misc_iox_sensor/example/src/iox_sensor.c: In function 'temp_update':
misc_iox_sensor/example/src/iox_sensor.c:96:26: error: 'SHIELD_I2C' undeclared (first use in this function)
  Chip_I2C_MasterTransfer(SHIELD_I2C, &xfer);
                          ^
misc_iox_sensor/example/src/iox_sensor.c: In function 'iox_write_reg':
misc_iox_sensor/example/src/iox_sensor.c:118:22: error: 'SHIELD_I2C' undeclared (first use in this function)
  Chip_I2C_MasterSend(SHIELD_I2C, IOX_SLV_ADDR, buf, 2);
                      ^
misc_iox_sensor/example/src/iox_sensor.c: In function 'iox_read_reg':
misc_iox_sensor/example/src/iox_sensor.c:132:26: error: 'SHIELD_I2C' undeclared (first use in this function)
  Chip_I2C_MasterTransfer(SHIELD_I2C, &xfer);
                          ^
misc_iox_sensor/example/src/iox_sensor.c: In function 'print_bmi_id':
misc_iox_sensor/example/src/iox_sensor.c:152:26: error: 'SHIELD_I2C' undeclared (first use in this function)
  Chip_I2C_MasterTransfer(SHIELD_I2C, &xfer);
                          ^
misc_iox_sensor/example/src/iox_sensor.c: In function 'iox_init':
misc_iox_sensor/example/src/iox_sensor.c:216:21: error: 'IOX_INT_PORT' undeclared (first use in this function)
  Chip_SCU_PinMuxSet(IOX_INT_PORT, IOX_INT_PIN,
                     ^
misc_iox_sensor/example/src/iox_sensor.c:216:35: error: 'IOX_INT_PIN' undeclared (first use in this function)
  Chip_SCU_PinMuxSet(IOX_INT_PORT, IOX_INT_PIN,
                                   ^
misc_iox_sensor/example/src/iox_sensor.c:217:49: error: 'IOX_MODE_FUNC' undeclared (first use in this function)
         (SCU_MODE_INBUFF_EN | SCU_MODE_PULLUP | IOX_MODE_FUNC) );
                                                 ^
misc_iox_sensor/example/src/iox_sensor.c:220:42: error: 'IOX_INT_GPIO_PORT' undeclared (first use in this function)
  Chip_GPIO_SetPinDIRInput(LPC_GPIO_PORT, IOX_INT_GPIO_PORT, IOX_INT_GPIO_PIN);
                                          ^
misc_iox_sensor/example/src/iox_sensor.c:220:61: error: 'IOX_INT_GPIO_PIN' undeclared (first use in this function)
  Chip_GPIO_SetPinDIRInput(LPC_GPIO_PORT, IOX_INT_GPIO_PORT, IOX_INT_GPIO_PIN);
                                                             ^
make[1]: *** [misc_iox_sensor/example/src/iox_sensor.o] Error 1
make[1]: se sale del directorio «/home/martin/Proyectos/ciaa/liblpc»
